# robot_programing_ros

./: .gitignore  README.md  robotprog  robotprog.py
beagle_bringup/: package.xml  setup.cfg  setup.py
beagle_bringup/beagle_bringup/: bringup.py
beagle_camera/: package.xml  setup.cfg  setup.py
beagle_camera/beagle_camera/: camera_yolo.py
beagle_msgs/: CMakeLists.txt  package.xml
beagle_msgs/action/: MotorControl.action
beagle_msgs/msg/: CameraDetection.msg  LidarData.msg  MoterControl.msg  Rects.msg  ServoControl.msg
beagle_msgs/msg_srv_action_interface/: CMakeLists.txt  package.xml
beagle_msgs/srv/: ConnectChecker.srv  MoterControl.srv  RobotMotor.srv
beagle_operator/: CMakeLists.txt  package.xml
beagle_operator/include/beagle_operator/: beagle_operator.hpp
beagle_operator/src/: beagle_operator.cpp
beagle_robot/: package.xml  setup.cfg  setup.py
beagle_robot/beagle_robot/: beagle_robot.py
block_coding_node/: package.xml  setup.cfg  setup.py
block_coding_node/block_coding_node/: main.py  main_copy.py
block_coding_node/block_coding_node/coding_node/: main copy.py  main.py
block_coding_node/launch/: block_coding.launch.py
block_coding_node/param/: param.yaml
moter_control/: CMakeLists.txt  package.xml
moter_control/include/moter_control/: moter_control_node.hpp
moter_control/src/: moter_control.cpp  moter_control_node.cpp
motor_control/: CMakeLists.txt  package.xml
motor_control/include/motor_control/: motor_control_node.hpp
motor_control/src/: motor_control.cpp  motor_control_node.cpp
